# msTrawler

./: .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
R/: FileConverter.R  Helpers.R  Main.R  PreProcessing.R
data/: covariateFile.rda  covariateFile2.rda  sampleDat.rda  sampleDat2.rda  sampleFile.rda  sampleFile2.rda
data/tutorial_example/: covariate_file.csv  pd_example_export_PSMs.txt  pd_example_export_Proteins.txt  sample_file.csv
docs/: statistical_methods.md  statistical_methods_explained.md
man/: adaptModel.Rd  convertPdFile.Rd  findOutliers.Rd  geoNorm.Rd  miniTrawl.Rd  msTrawl.Rd  protPrep.Rd  tmtLOD.Rd
python/: Dockerfile  Dockerfile.r  README.md  pyproject.toml
python/src/mstrawler/: __init__.py  cli.py  covariate_setup.py  file_converter.py  model_fitting.py  model_fitting_r.py  pipeline.py  preprocessing.py  restructure.py  results.py
python/src/mstrawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/tests/e2e/: test_file_converter.py  test_pipeline.py  test_preprocessing.py
tests/: Dockerfile  README.md  compare_outputs.R  generate_golden_baseline.R  run_e2e.sh
tests/candidate/: converted_df.csv  geonorm_intensities.csv  lod_intensities.csv
tests/candidate/pipeline/: Factor_Age_Old.csv  Time_Old.csv
tests/candidate/pipeline_simple/: ColAdjustmentFactors.csv
tests/golden/: geonorm_factors.csv  lod_snr.csv  lod_toofew.csv
tests/golden/pipeline/: Factor_Age_Young.csv  Simple.csv  Time_Young.csv
vignettes/: msTrawler_Manual.Rmd
