[build-system]
requires = ["setuptools>=68.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mstrawler"
dynamic = ["version"]
description = "Peptide-level modeling of protein associations from multiplexed proteomics data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
r = [
    "rpy2>=3.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
mstrawler = "mstrawler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
root = ".."

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
